# timecode-generator

./: .gitignore  README.md  default.nix  timecode-generator.cabal
src/: Main.hs
